# asterlane

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  clippy.toml  compose.yaml  deny.toml  justfile  run.yaml
.github/workflows/: ci.yml
docs/: README.md  admin-console.md  agent-skill.md  api-discovery.md  architecture.md  cli-client-architecture.md  cli-config-discovery.md  compatibility-policy.md  config-schema.md  crate-selection.md  development-workflow.md  documentation-conventions.md  engineering-conventions.md  error-model.md  index.md  key-credentials-and-persistence.md  log.md  mcp-governance-and-key-limits.md  naming-convention.md  observability.md  product-requirements.md  response-rendering.md  tool-debugging-and-cli.md
examples/: gateway-mcp.yaml  gateway.yaml
migrations/: 20260703000001_init.sql  20260704000001_security_events.sql  20260705000001_payload_capture.sql  20260705000002_tool_defaults.sql  20260706000001_tool_metadata.sql  20260706000002_mcp_servers.sql
plans/: 2026-07-22-unified-cli-client.md  2026-07-23-cli-config-discovery.md
scripts/: check_okf_docs.py
src/: catalog.rs  cli.rs  config.rs  config_path.rs  discovery.rs  error.rs  gateway_auth.rs  integrity.rs  lib.rs  main.rs  naming.rs  policy.rs  presets.rs  render.rs  semantic.rs  shaping.rs
src/admin/: auth.rs  console.html  crud.rs  defaults.rs  mcp.rs  metadata.rs  mod.rs  (+1 more)
tests/: gateway_auth.rs  integrity_drift.rs  limits_enforcement.rs  mcp_proxy_integration.rs  mcp_proxy_model.rs  proxy_upstream.rs  secret_backends.rs  semantic_search.rs
(+80 files in other folders)
